# protean

./: .bumpversion.cfg  .bumpversion.toml  .codacy.yml  .cookiecutterrc  .coveragerc  .editorconfig  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  404.html  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  README.rst  SECURITY.md  another_test.db  codecov.yml  config.py  docker-compose.yml  domain.py  fieldspec-implementation-guide.md  index.html  mega_change.patch  mkdocs.yml  (+14 more)
.claude/: settings.json
.claude/agents/: pr-reviewer.md  test-runner.md
.claude/hooks/: block-dangerous-git.sh  pre-compact-save.sh  protean-pulse.py  protect-config.sh  statusline.sh  stop-changelog-reminder.sh  stop-lint-format.sh  test-hooks.sh
.claude/skills/: INDEX.md
.cursor/rules/: testing-strategy.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/instructions/: architecture.instructions.md  code-quality.instructions.md  testing.instructions.md
.github/workflows/: backport.yml  ci.yml  dependency-review.yml  mirror-images.yml  nightly.yml  publish.yml  python.yml  python3.6.yml  python3.7.yml  python3.8-dev.yml  python3.8.yml  python3.9-dev.yml
CLAUDE/: index.html
adapters/: index.html
adapters/broker/: index.html
adapters/cache/: index.html
adapters/database/: index.html
adapters/eventstore/: index.html
adapters/internals/: index.html
adr/: index.html
adr/0000-guiding-principles/: index.html
adr/0001-monotonic-integer-event-versioning/: index.html
adr/0002-event-publication-visibility/: index.html
adr/0003-one-ir-document-per-bounded-context/: index.html
adr/0004-release-workflow-and-breaking-change-policy/: index.html
adr/0005-ir-first-schema-generation/: index.html
adr/0006-standard-json-schema-with-x-extensions/: index.html
adr/0007-domain-scoped-opentelemetry-providers/: index.html
adr/0008-centralized-telemetry-gateway-and-traceparent-bridging/: index.html
adr/0009-concurrent-event-processing-strategy/: index.html
adr/0010-logging-overhaul-and-wide-event-architecture/: index.html
adr/0011-engine-shutdown-and-resource-lifecycle-contract/: index.html
adr/0012-health-check-architecture/: index.html
adr/0013-optimistic-concurrency-and-claim-contract/: index.html
adr/0014-aggregate-metadata-decorator-params-over-meta-class/: index.html
adr/0015-event-store-append-as-durable-anchor/: index.html
adr/0016-breadth-first-synchronous-event-dispatch/: index.html
api/: index.html
api/aggregate/: index.html
api/database-model/: index.html
api/domain/: index.html
api/entity/: index.html
api/event-processing/: index.html
api/eventing/: index.html
api/fields/: index.html
api/handlers/: index.html
api/messages/: index.html
api/ports/: index.html
api/processing/: index.html
api/queryset/: index.html
api/read-models/: index.html
api/repository/: index.html
api/services/: index.html
api/testing/: index.html
api/unit-of-work/: index.html
api/value-object/: index.html
assets/javascripts/: bundle.13a4f30d.min.js  bundle.50899def.min.js  bundle.56ea9cef.min.js  bundle.79ae519e.min.js  bundle.92b07e13.min.js  bundle.bd41221c.min.js  bundle.c8b220af.min.js
changes/: 1001.added.md  1009.added.md  1009.fixed.md  1011.deprecated.md  1012.fixed.md  1013.fixed.md  1014.changed.md  1015.fixed.md  1023.fixed.md  1025.fixed.md  1028.fixed.md  1034.fixed.md  1037.fixed.md  1038.added.md  1039.fixed.md  1040.added.md  1040.fixed.md  1041.fixed.md  1042.added.md  1043.fixed.md  1046.fixed.md  1048.changed.md  1048.fixed.md  1053.changed.md  1055.fixed.md  1056.fixed.md  1058.changed.md  1059.fixed.md  1064.added.md  1065.added.md  1068.added.md  1071.fixed.md  1073.fixed.md  1076.fixed.md  1078.fixed.md  1080.changed.md  1087.fixed.md  1088.fixed.md  1089.fixed.md  1090.changed.md  (+110 more)
ci/: bootstrap.py
community/: index.html
community/contributing/: index.html
community/quality/: index.html
concepts/: index.html
concepts/architecture/: index.html
concepts/async-processing/: index.html
concepts/building-blocks/: index.html
concepts/foundations/: index.html
concepts/internals/: index.html
concepts/philosophy/: index.html
concepts/ports-and-adapters/: index.html
contents/: index.html
core-concepts/analysis-model/: index.html
core-concepts/anti-patterns/: index.html
core-concepts/architecture-decision/: index.html
docs/: CLAUDE.md  CNAME  api.rst  conf.py  contents.md  features.md  glossary.md  how-do-i.md  index.md  index.rst  installation.rst  requirements.txt  start-here.md  usage.rst  why-protean.md
docs-sphinx/: conf.py  requirements.txt
examples/: ray_handlers.py
features/: index.html
glossary/: index.html
guides/: index.html
how-do-i/: index.html
javascripts/: mermaid-init.js
patterns/: index.html
reference/: index.html
requirements/: dev.txt  prod.txt  test.txt
scripts/: mutation.sh
search/: search_index.json
setup_scripts/: 1.sh
start-here/: index.html
stylesheets/: extra.css
tests/: CLAUDE.md  config.py  conftest.py  domain.toml  shared.py  test_aggregates.py  test_brokers.py  test_cli.py  test_command_handlers.py  test_commands.py  test_config.py  test_containers.py  test_context.py  test_coverage_guards.py  test_database_model.py  test_deprecation.py  test_doc_coverage.py  test_docs_src.py  test_docs_src_evolving_events.py  test_domain.py  test_entity.py  test_es_tutorial.py  test_exceptions.py  test_fd_hermeticity.py  test_logging.py  test_options.py  test_other.py  test_outbox_config_and_db_setup.py  test_protean.py  test_protean_cli.py  test_registry.py  test_repository.py  test_smart_routing.py  test_subscribers.py  test_tutorial.py  test_usecase.py  test_utils.py
why-protean/: index.html
(+3019 files in other folders)
