[project]
name = "protean"
version = "0.15.0rc1"
description = "Protean Application Framework"
authors = [{name = "Subhash Bhushan C", email = "subhash@team8solutions.com"}]
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "ddd",
    "domain-driven-design",
    "clean-architecture",
    "hexagonal-architecture",
    "onion-architecture",
    "microservices",
    "python-framework",
    "repository-pattern",
    "cqrs",
    "event-sourcing",
    "aggregates",
    "entities",
    "value-objects",
    "services",
    "bounded-contexts",
    "asynchronous",
    "event-driven-architecture",
    "cqrs-framework",
    "event-sourcing-framework"
]
classifiers = [
    # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "bleach>=4.1.0",
    "copier>=9.1.1,<10",
    "inflection>=0.5.1",
    "ipython>=8.23,<10.0",
    "marshmallow>=3.15.0",
    "python-dateutil>=2.8.2",
    "typer>=0.12.3",
    "fastapi>=0.110.0",
    "jinja2>=3.1.0",
    "uvicorn>=0.27.1",
    "structlog>=24.1.0",
    "werkzeug>=2.0.0",
    "cffi>=1.16.5",
    "pydantic>=2.10,<3.0",
    "greenlet>=3.0.3,<4",
]

[project.optional-dependencies]
elasticsearch = ["elasticsearch~=7.17.9", "elasticsearch-dsl~=7.4.1"]
redis = ["redis>=5.0.7,<7.4.0"]
postgresql = ["sqlalchemy~=2.0.30", "psycopg2-binary>=2.9.9"]
sqlite = ["sqlalchemy~=2.0.30"]
mssql = ["sqlalchemy~=2.0.30", "pyodbc>=5.0.0"]
message-db = ["message-db-py>=0.3.4"]
flask = ["flask>=1.1.1"]
sendgrid = ["sendgrid>=6.1.3"]
telemetry = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-exporter-prometheus>=0.41b0",
]

[project.scripts]
protean = "protean.cli:app"

[project.entry-points."protean.brokers"]
inline = "protean.adapters.broker.inline:register"
redis = "protean.adapters.broker.redis:register"
redis_pubsub = "protean.adapters.broker.redis_pubsub:register"

[project.entry-points."protean.providers"]
memory = "protean.adapters.repository.memory:register"
postgresql = "protean.adapters.repository.sqlalchemy:register_postgresql"
sqlite = "protean.adapters.repository.sqlalchemy:register_sqlite"
mssql = "protean.adapters.repository.sqlalchemy:register_mssql"
elasticsearch = "protean.adapters.repository.elasticsearch:register"

[project.entry-points."pytest11"]
protean = "protean.integrations.pytest.plugin"

[project.entry-points."mypy.plugins"]
protean = "protean.ext.mypy_plugin:plugin"

[project.urls]
Repository = "https://github.com/proteanhq/protean"
Documentation = "https://docs.proteanhq.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/protean"]

############################
# Development Dependencies *
############################

[dependency-groups]
dev = [
    "check-manifest>=0.49",
    "coverage>=7.3.2",
    "docutils>=0.20.1",
    "pre-commit>=2.16.0",
    "ruff>=0.4.3",
    "twine>=4.0.2",
    "nox>=2026.2.9",
    "bump-my-version>=1.2.7",
]
test = [
    "diff-cover>=9.2.4",
    "mock==5.2.0",
    "pytest-asyncio>=0.21.1",
    "pytest-mock==3.15.1",
    "pytest>=8.2.1,<10.0.0",
    "mypy>=1.11.0",
    "coverage>=7.8.0",
    "httpx>=0.27.0",
    "jsonschema>=4.20.0",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5.15",
    "mdx-include>=1.4.2",
    "mkdocstrings[python]>=0.27,<2",
]
types = [
    "types-mock>=0.1.3",
    "types-python-dateutil>=0.1.6",
    "types-redis>=3.5.4",
    "types-Werkzeug>=1.0.5",
]

##################
# Configurations #
##################

[tool.ruff.lint.per-file-ignores]
# Mypy test fixtures use reveal_type() which is a mypy built-in, not a runtime function
"tests/ext/fixtures/*.py" = ["F821"]
# Tutorial ch09 concatenates multiple module files into one for documentation snippets
"docs_src/guides/getting-started/tutorial/ch09.py" = ["E402", "F811"]

[tool.ruff.lint.isort]
known-first-party = ["protean"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::sqlalchemy.exc.SAWarning",
    "ignore:No configuration file found.*Using default configuration.*:UserWarning",
    "ignore:Working outside of domain context",
    "ignore:.*was never awaited:RuntimeWarning"
]
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py"
]
addopts = "-ra --strict-markers --doctest-modules --doctest-glob=*.rst --tb=short"
markers = [
    "slow",
    "pending",
    "sqlite",
    "postgresql",
    "mssql",
    "elasticsearch",
    "redis",
    "message_db",
    "sendgrid",
    "database",
    "eventstore",
    "no_test_domain",
    "fastapi",
    "asyncio: mark test as an asyncio coroutine (registered by pytest-asyncio)",
    # Capability-based markers for broker testing
    "basic_pubsub: tests for basic pub/sub capability (publish/subscribe only)",
    "simple_queuing: tests for simple queuing capability (includes consumer groups)",
    "reliable_messaging: tests for reliable messaging capability (includes ack/nack)",
    "ordered_messaging: tests for ordered messaging capability (includes message order)",
    "enterprise_streaming: tests for enterprise streaming capability (includes DLQ, replay, partitioning)",
    "sa_provider: tests requiring an SQLAlchemy-backed database provider",
    # Capability-based markers for database testing
    "basic_storage: tests for basic CRUD, filtering, bulk operations, ordering (all providers)",
    "transactional: tests requiring transaction support (real or simulated commit/rollback)",
    "atomic_transactions: tests requiring real database-level atomicity (not simulated)",
    "raw_queries: tests requiring raw query execution capability",
    "schema_management: tests requiring table/index creation and deletion",
    "native_json: tests requiring native JSON column support",
    "native_array: tests requiring native array column support",
]

[tool.mypy]
plugins = ["protean.ext.mypy_plugin"]
exclude = [".venv", "src/protean/template", "docs_src"]
warn_unused_configs = true

[tool.coverage.paths]
source = [
    "src/protean",
    "*/site-packages/protean"
]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/protean"]
omit = [
    "*/__main__.py",
    "src/protean/utils/inflection.py",
    "src/protean/utils/local.py"
]

[tool.coverage.report]
show_missing = true
precision = 2
omit = [
    "*migrations*",
    "*/template/*",  # Exclude template files - they're copied, not executed
]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]
