[project]
name = "protean"
version = "0.16.0"
description = "An opinionated DDD, CQRS, and event-sourcing framework for Python"
authors = [{name = "Subhash Bhushan C", email = "subhash@team8solutions.com"}]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "ddd",
    "domain-driven-design",
    "clean-architecture",
    "hexagonal-architecture",
    "onion-architecture",
    "microservices",
    "python-framework",
    "repository-pattern",
    "cqrs",
    "event-sourcing",
    "aggregates",
    "entities",
    "value-objects",
    "services",
    "bounded-contexts",
    "asynchronous",
    "event-driven-architecture",
    "cqrs-framework",
    "event-sourcing-framework"
]
classifiers = [
    # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "bleach>=6.4.0",
    "copier>=9.16.0,<10",
    "inflection>=0.5.1",
    "ipython>=9.15.0,<10.0",
    "marshmallow>=4.3.0",
    "python-dateutil>=2.9.0.post0",
    "typer>=0.26.8",
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "uvicorn>=0.51.0",
    "structlog>=26.1.0",
    "werkzeug>=3.1.8",
    "cffi>=2.1.0",
    "pydantic>=2.13.4,<3.0",
    "greenlet>=3.5.3,<4",
]

[project.optional-dependencies]
elasticsearch = ["elasticsearch>=8.19.3,<9.0.0"]
redis = ["redis>=8.0.1,<8.1.0"]
postgresql = ["sqlalchemy~=2.0.51", "psycopg2-binary>=2.9.12"]
sqlite = ["sqlalchemy~=2.0.51"]
mssql = ["sqlalchemy~=2.0.51", "pyodbc>=5.3.0"]
message-db = ["message-db-py>=0.3.4"]
flask = ["flask>=3.1.3"]
sendgrid = ["sendgrid>=6.12.5"]
dev = ["watchfiles>=1.2.0"]
telemetry = [
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.43.0",
    "opentelemetry-instrumentation-fastapi>=0.64b0",
    "opentelemetry-exporter-prometheus>=0.64b0",
]

[project.scripts]
protean = "protean.cli:app"
protean-check-staleness = "protean.cli.hooks:check_staleness_hook"
protean-check-compat = "protean.cli.hooks:check_compat_hook"

[project.entry-points."protean.brokers"]
inline = "protean.adapters.broker.inline:register"
redis = "protean.adapters.broker.redis:register"
redis_pubsub = "protean.adapters.broker.redis_pubsub:register"

[project.entry-points."protean.providers"]
memory = "protean.adapters.repository.memory:register"
postgresql = "protean.adapters.repository.sqlalchemy:register_postgresql"
sqlite = "protean.adapters.repository.sqlalchemy:register_sqlite"
mssql = "protean.adapters.repository.sqlalchemy:register_mssql"
elasticsearch = "protean.adapters.repository.elasticsearch:register"

[project.entry-points."pytest11"]
protean = "protean.integrations.pytest.plugin"

[project.entry-points."mypy.plugins"]
protean = "protean.ext.mypy_plugin:plugin"

[project.urls]
Homepage = "https://docs.proteanhq.com"
Documentation = "https://docs.proteanhq.com"
Repository = "https://github.com/proteanhq/protean"
Issues = "https://github.com/proteanhq/protean/issues"
Changelog = "https://github.com/proteanhq/protean/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/protean"]

############################
# Development Dependencies *
############################

[dependency-groups]
dev = [
    "check-manifest>=0.51",
    "coverage>=7.15.0",
    "docutils>=0.23",
    "pre-commit>=4.6.0",
    "ruff>=0.15.21",
    "twine>=6.2.0",
    "nox>=2026.4.10",
    "bump-my-version>=1.4.1",
    "pyright>=1.1.411",
]
test = [
    "chardet>=7.4.3,<8",
    "diff-cover>=10.3.0",
    "mock==5.2.0",
    "pytest-asyncio>=1.4.0",
    "pytest-mock==3.15.1",
    "pytest>=9.1.1,<10.0.0",
    "mypy>=2.2.0",
    "coverage>=7.15.0",
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    # Round-trip validation of generated Avro schemas (protean schema --format avro)
    "fastavro>=1.12.2",
    # Portable open-file-descriptor probe for the fd-leak guard (PROTEAN_FD_REPORT); see #1168
    "psutil>=7.2.2",
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.7.6",
    "mdx-include>=1.4.2",
    "mkdocstrings[python]>=1.0.5,<2",
    "pymdown-extensions>=11.0.1",
]
types = [
    "types-mock>=5.2.0.20260518",
    "types-python-dateutil>=2.9.0.20260518",
    "types-redis>=4.6.0.20241004",
    "types-Werkzeug>=1.0.9",
]
# Mutation testing. Installed only into the dedicated .venv-mutation environment
# built by `make mutation` / scripts/mutation.sh — never the project .venv. That
# env is Python 3.12: Python 3.14 is too bleeding-edge for reliable mutation
# testing of Protean's C-extension deps (mutmut 2.x pickle-crashes on 3.14;
# mutmut 3.x segfaults ~20% of mutants there). See scripts/mutation.sh and
# docs/community/contributing/mutation-testing.md for the full rationale.
mutation = [
    "mutmut>=3.6.0",
]

##################
# Configurations #
##################

[tool.ruff.lint]
# Imports must live at module top. Function-local imports are allowed only for
# verified reasons (optional dep, monkeypatch test seam, lazy CLI startup,
# PEP-562 export, circular-import breaker, dynamic module) and must carry an
# explicit `# noqa: PLC0415`. See CLAUDE.md > Common Pitfalls.
extend-select = ["PLC0415"]

[tool.ruff.lint.per-file-ignores]
# Mypy test fixtures use reveal_type() which is a mypy built-in, not a runtime function
"tests/ext/fixtures/*.py" = ["F821"]
# Tutorial ch09 concatenates multiple module files into one for documentation snippets
"docs_src/guides/getting-started/tutorial/ch09.py" = ["E402", "F811"]
# Tests legitimately use function-local imports (fixtures, lazy patches);
# the import-at-top rule is scoped to framework source.
"tests/**/*.py" = ["PLC0415"]

[tool.ruff.lint.isort]
known-first-party = ["protean"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::sqlalchemy.exc.SAWarning",
    "ignore:No configuration file found.*Using default configuration.*:UserWarning",
    "ignore:Working outside of domain context",
    "ignore:.*was never awaited:RuntimeWarning",
]
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py"
]
addopts = "-ra --strict-markers --doctest-modules --doctest-glob=*.rst --tb=short"
markers = [
    "slow",
    "pending",
    "sqlite",
    "postgresql",
    "mssql",
    "elasticsearch",
    "redis",
    "message_db",
    "sendgrid",
    "database",
    "eventstore",
    "no_test_domain",
    "fastapi",
    "flaky: timing-sensitive or non-deterministic test; run in isolation via `make test-flaky`",
    "asyncio: mark test as an asyncio coroutine (registered by pytest-asyncio)",
    # Capability-based markers for broker testing
    "basic_pubsub: tests for basic pub/sub capability (publish/subscribe only)",
    "simple_queuing: tests for simple queuing capability (includes consumer groups)",
    "reliable_messaging: tests for reliable messaging capability (includes ack/nack)",
    "ordered_messaging: tests for ordered messaging capability (includes message order)",
    "enterprise_streaming: tests for enterprise streaming capability (includes DLQ, replay, partitioning)",
    "sa_provider: tests requiring an SQLAlchemy-backed database provider",
    # Capability-based markers for database testing
    "basic_storage: tests for basic CRUD, filtering, bulk operations, ordering (all providers)",
    "transactional: tests requiring transaction support (real or simulated commit/rollback)",
    "atomic_transactions: tests requiring real database-level atomicity (not simulated)",
    "raw_queries: tests requiring raw query execution capability",
    "schema_management: tests requiring table/index creation and deletion",
    "native_json: tests requiring native JSON column support",
    "native_array: tests requiring native array column support",
]

[tool.mypy]
plugins = ["protean.ext.mypy_plugin"]
exclude = [".venv", "src/protean/template", "docs_src"]
warn_unused_configs = true
warn_unused_ignores = true
strict = true

# Third-party libraries without type stubs / py.typed. Their imports and calls
# are treated as untyped rather than erroring under --strict.
[[tool.mypy.overrides]]
module = [
  "psycopg2",
  "psycopg2.*",
  "message_db",
  "message_db.*",
  "IPython",
  "IPython.*",
]
ignore_missing_imports = true

# Test helpers imported by src (e.g. integrations.pytest.adapter_conformance
# pulls in tests.shared) are not part of the strict src surface.
[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true
ignore_missing_imports = true

[tool.coverage.paths]
source = [
    "src/protean",
    "*/site-packages/protean"
]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/protean"]
omit = [
    "*/__main__.py",
    "src/protean/utils/inflection.py",
    "src/protean/utils/local.py"
]

[tool.coverage.report]
show_missing = true
precision = 2
omit = [
    "*migrations*",
    "*/template/*",  # Exclude template files - they're copied, not executed
]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]
