[project]
name = "protean"
version = "0.16.0"
description = "An opinionated DDD, CQRS, and event-sourcing framework for Python"
authors = [{name = "Subhash Bhushan C", email = "subhash@team8solutions.com"}]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "ddd",
    "domain-driven-design",
    "clean-architecture",
    "hexagonal-architecture",
    "onion-architecture",
    "microservices",
    "python-framework",
    "repository-pattern",
    "cqrs",
    "event-sourcing",
    "aggregates",
    "entities",
    "value-objects",
    "services",
    "bounded-contexts",
    "asynchronous",
    "event-driven-architecture",
    "cqrs-framework",
    "event-sourcing-framework"
]
classifiers = [
    # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "bleach>=6.1.0",
    "copier>=9.4.0,<10",
    "inflection>=0.5.1",
    "ipython>=9.0.0,<10.0",
    "marshmallow>=4.0.0",
    "python-dateutil>=2.8.2",
    "typer>=0.16.0",
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "uvicorn>=0.30.0",
    "structlog>=24.1.0",
    "werkzeug>=3.1.0",
    "cffi>=2.0.0",
    "pydantic>=2.12.0,<3.0",
    "greenlet>=3.2.0,<4",
]

[project.optional-dependencies]
elasticsearch = ["elasticsearch>=8.18.0,<9.0.0"]
redis = ["redis>=8.0.0,<8.1.0"]
postgresql = ["sqlalchemy>=2.0.36,<2.1", "psycopg2-binary>=2.9.11"]
sqlite = ["sqlalchemy>=2.0.36,<2.1"]
mssql = ["sqlalchemy>=2.0.36,<2.1", "pyodbc>=5.3.0"]
message-db = ["message-db-py>=0.3.4"]
flask = ["flask>=3.0.0"]
sendgrid = ["sendgrid>=6.11.0"]
dev = ["watchfiles>=1.2.0"]
telemetry = [
    "opentelemetry-api>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.36.0",
    "opentelemetry-instrumentation-fastapi>=0.57b0",
    "opentelemetry-exporter-prometheus>=0.57b0",
]

[project.scripts]
protean = "protean.cli:app"
protean-check-staleness = "protean.cli.hooks:check_staleness_hook"
protean-check-compat = "protean.cli.hooks:check_compat_hook"

[project.entry-points."protean.brokers"]
inline = "protean.adapters.broker.inline:register"
redis = "protean.adapters.broker.redis:register"
redis_pubsub = "protean.adapters.broker.redis_pubsub:register"

[project.entry-points."protean.providers"]
memory = "protean.adapters.repository.memory:register"
postgresql = "protean.adapters.repository.sqlalchemy:register_postgresql"
sqlite = "protean.adapters.repository.sqlalchemy:register_sqlite"
mssql = "protean.adapters.repository.sqlalchemy:register_mssql"
elasticsearch = "protean.adapters.repository.elasticsearch:register"

[project.entry-points."pytest11"]
protean = "protean.integrations.pytest.plugin"

[project.entry-points."mypy.plugins"]
protean = "protean.ext.mypy_plugin:plugin"

[project.urls]
Homepage = "https://docs.proteanhq.com"
Documentation = "https://docs.proteanhq.com"
Repository = "https://github.com/proteanhq/protean"
Issues = "https://github.com/proteanhq/protean/issues"
Changelog = "https://github.com/proteanhq/protean/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/protean"]

############################
# Development Dependencies *
############################

[dependency-groups]
dev = [
    "check-manifest>=0.51",
    "coverage>=7.15.2",
    "docutils>=0.23",
    "pre-commit>=4.6.0",
    "ruff>=0.15.22",
    "twine>=6.2.0",
    "nox>=2026.7.11",
    "bump-my-version>=1.4.1",
    "pyright>=1.1.411",
]
test = [
    "chardet>=7.4.3,<8",
    "diff-cover>=10.3.0",
    "mock==5.2.0",
    "pytest-asyncio>=1.4.0",
    "pytest-mock==3.15.1",
    "pytest>=9.1.1,<10.0.0",
    "mypy>=2.3.0",
    "coverage>=7.15.2",
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    # Round-trip validation of generated Avro schemas (protean schema --format avro)
    "fastavro>=1.12.2",
    # Portable open-file-descriptor probe for the fd-leak guard (PROTEAN_FD_REPORT); see #1168
    "psutil>=7.2.2",
    # Property-based testing (the serialization round-trip suite under tests/serialization/).
    "hypothesis>=6.156.6,<7",
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.7.6",
    "mdx-include>=1.4.2",
    "mkdocstrings[python]>=1.0.6,<2",
    "pymdown-extensions>=11.0.1",
]
types = [
    "types-mock>=5.2.0.20260518",
    "types-python-dateutil>=2.9.0.20260716",
    "types-redis>=4.6.0.20241004",
    "types-Werkzeug>=1.0.9",
]
# Mutation testing. Installed only into the dedicated .venv-mutation environment
# built by `make mutation` / scripts/mutation.sh — never the project .venv. That
# env is Python 3.12: Python 3.14 is too bleeding-edge for reliable mutation
# testing of Protean's C-extension deps (mutmut 2.x pickle-crashes on 3.14;
# mutmut 3.x segfaults ~20% of mutants there). See scripts/mutation.sh and
# docs/community/contributing/mutation-testing.md for the full rationale.
mutation = [
    "mutmut>=3.6.0",
]

##################
# Configurations #
##################

[tool.ruff.lint]
# Imports must live at module top. Function-local imports are allowed only for
# verified reasons (optional dep, monkeypatch test seam, lazy CLI startup,
# PEP-562 export, circular-import breaker, dynamic module) and must carry an
# explicit `# noqa: PLC0415`.
extend-select = [
    "PLC0415", # imports at module top (function-local imports need an explicit noqa)
    "I",       # isort — import ordering (isort config is set below)
    "UP",      # pyupgrade — modernize syntax for the minimum Python (3.11+)
    "B",       # flake8-bugbear — likely bugs (raise-without-from, mutable defaults, …)
    "C4",      # flake8-comprehensions
    "SIM",     # flake8-simplify
    "PIE",     # flake8-pie — misc small lints
    "PERF",    # perflint — performance anti-patterns
    "RUF",     # Ruff-specific rules
]
ignore = [
    "SIM117", # combining nested `with` statements often hurts readability (3+ contexts)
    "SIM108", # if/else-to-ternary frequently reads worse than the explicit form
    "B027",   # empty base-class methods are intentional optional hooks
    "B019",   # lru_cache on methods is deliberate here (framework-level singletons)
    "B009",   # getattr/setattr with a constant is the idiomatic mypy-clean way to
    "B010",   # read/write dynamic attributes on decorator-wrapped/typed objects here

    "RUF001", # ambiguous-unicode: intentional typographic / mathematical characters
    "RUF002", # (same, in docstrings)
    "RUF003", # (same, in comments)
]

[tool.ruff.lint.per-file-ignores]
# Mypy test fixtures use reveal_type() which is a mypy built-in, not a runtime function
"tests/ext/fixtures/*.py" = ["F821"]
# Tutorial ch09 concatenates multiple module files into one for documentation snippets
"docs_src/guides/getting-started/tutorial/ch09.py" = ["E402", "F811"]
# Tests legitimately use function-local imports (fixtures, lazy patches);
# the import-at-top rule is scoped to framework source. B018 (bare attribute
# access to trigger lazy loads in conftests), B017/RUF043 (broad pytest.raises
# patterns), and RUF012 (mutable fixtures on test classes) are all fine in tests.
"tests/**/*.py" = ["PLC0415", "B018", "B017", "RUF012", "RUF043"]

[tool.ruff.lint.isort]
known-first-party = ["protean"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::sqlalchemy.exc.SAWarning",
    "ignore:No configuration file found.*Using default configuration.*:UserWarning",
    "ignore:Working outside of domain context",
    "ignore:.*was never awaited:RuntimeWarning",
]
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py"
]
addopts = "-ra --strict-markers --doctest-modules --doctest-glob=*.rst --tb=short"
markers = [
    "slow",
    "pending",
    "sqlite",
    "postgresql",
    "mssql",
    "elasticsearch",
    "redis",
    "message_db",
    "sendgrid",
    "database",
    "eventstore",
    "no_test_domain",
    "fastapi",
    "flaky: timing-sensitive or non-deterministic test; run in isolation via `make test-flaky`",
    "asyncio: mark test as an asyncio coroutine (registered by pytest-asyncio)",
    # Capability-based markers for broker testing
    "basic_pubsub: tests for basic pub/sub capability (publish/subscribe only)",
    "simple_queuing: tests for simple queuing capability (includes consumer groups)",
    "reliable_messaging: tests for reliable messaging capability (includes ack/nack)",
    "ordered_messaging: tests for ordered messaging capability (includes message order)",
    "enterprise_streaming: tests for enterprise streaming capability (includes DLQ, replay, partitioning)",
    "sa_provider: tests requiring an SQLAlchemy-backed database provider",
    # Capability-based markers for database testing
    "basic_storage: tests for basic CRUD, filtering, bulk operations, ordering (all providers)",
    "transactional: tests requiring transaction support (real or simulated commit/rollback)",
    "atomic_transactions: tests requiring real database-level atomicity (not simulated)",
    "raw_queries: tests requiring raw query execution capability",
    "schema_management: tests requiring table/index creation and deletion",
    "native_json: tests requiring native JSON column support",
    "native_array: tests requiring native array column support",
]

[tool.mypy]
plugins = ["protean.ext.mypy_plugin"]
exclude = [".venv", "src/protean/template", "docs_src"]
warn_unused_configs = true
warn_unused_ignores = true
strict = true

# Third-party libraries without type stubs / py.typed. Their imports and calls
# are treated as untyped rather than erroring under --strict.
[[tool.mypy.overrides]]
module = [
  "psycopg2",
  "psycopg2.*",
  "message_db",
  "message_db.*",
  "IPython",
  "IPython.*",
]
ignore_missing_imports = true

# Test helpers imported by src (e.g. integrations.pytest.adapter_conformance
# pulls in tests.shared) are not part of the strict src surface.
[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true
ignore_missing_imports = true

[tool.coverage.paths]
source = [
    "src/protean",
    "*/site-packages/protean"
]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/protean"]
omit = [
    "*/__main__.py",
    "src/protean/utils/inflection.py",
    "src/protean/utils/local.py"
]

[tool.coverage.report]
show_missing = true
precision = 2
omit = [
    "*migrations*",
    "*/template/*",  # Exclude template files - they're copied, not executed
]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]
